--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Amazon Redirect</title>
     <script>
         function redirectToAmazon(productId) {
-            // Replace 'YOUR_AFFILIATE_ID' with your actual Amazon affiliate ID
-            const affiliateId = 'YOUR_AFFILIATE_ID';
+            const affiliateId = 'amanmahajan12-20';
 
             // Amazon deep link structure for iOS
             const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=https://www.amazon.com/dp/${productId}`;
