--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function redirectToAmazon(amazonLink) {
             // Replace 'YOUR_AFFILIATE_ID' with your actual Amazon affiliate ID
-            const affiliateId = 'YOUR_AFFILIATE_ID';
+            const affiliateId = 'amanmahajan12-20';
 
             // Amazon deep link structure for iOS
             const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
