--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             const affiliateId = 'amanmahajan12-20';
 
             // Amazon deep link structure for iOS
-           // const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
-             const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
+           const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
+             //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
             
             // Amazon deep link structure for Android
             const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mobile.shopping;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
