Update index.html alert

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
             // Check if the device is iOS or Android and open the respective deep link
             const userAgent = navigator.userAgent || navigator.vendor;
             if (/android/i.test(userAgent)) {
+            alert("andriod");
                 window.location.href = androidDeepLink;
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                alert("ios");
                 window.location.href = iosDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
+                alert("browser");
                 window.location.href = amazonLink;
             }
         }
