--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 window.location.href = iosDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
-                alert("browser");
+                  alert(androidDeepLink);
+                  console.log(androidDeepLink);
                 window.location.href = amazonLink;
             }
         }
