--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 // Open the Amazon link in the browser for unsupported platforms
                   alert(androidDeepLink);
                   console.log(androidDeepLink);
-                window.location.href = amazonLink;
+                //window.location.href = amazonLink;
             }
         }
 
