--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
              //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
             
             // Amazon deep link structure for Android
-            const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mobile.shopping;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
+            const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mShop.android.shopping;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
 
             // Check if the device is iOS or Android and open the respective deep link
             const userAgent = navigator.userAgent.toLowerCase() || navigator.vendor.toLowerCase();
             if (/android/i.test(userAgent)) {
             alert(androidDeepLink);
-                var androidPackage = "com.amazon.mShop.android.shopping";
-            window.location.href = "market://details?id=" + androidPackage;
-                //window.location.href = androidDeepLink;
+               // var androidPackage = "com.amazon.mShop.android.shopping";
+            //window.location.href = "market://details?id=" + androidPackage;
+                window.location.href = androidDeepLink;
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 alert("ios");
                 window.location.href = iosDeepLink;
