--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             // Check if the device is iOS or Android and open the respective deep link
             const userAgent = navigator.userAgent.toLowerCase() || navigator.vendor.toLowerCase();
             if (/android/i.test(userAgent)) {
-            alert(androidDeepLink);
+            //alert(androidDeepLink);
                // var androidPackage = "com.amazon.mShop.android.shopping";
             //window.location.href = "market://details?id=" + androidPackage;
                 window.location.href = androidDeepLink;
