--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 window.location.href = androidDeepLink;
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 alert("ios");
-                window.location.href = iosDeepLink;
+                window.location.href = androidDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
                   alert(androidDeepLink);
