--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 window.location.href = iosDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
-                  alert(androidDeepLink);
+                  alert(iosDeepLink);
                   console.log(androidDeepLink);
                 //window.location.href = amazonLink;
             }
