--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 // Open the Amazon link in the browser for unsupported platforms
                   alert(iosDeepLink);
                   console.log(androidDeepLink);
-                //window.location.href = amazonLink;
+                window.location.href = iosDeepLink;
             }
         }
 
