--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 window.location.href = iosDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
-                  alert(iosDeepLink);
-                  console.log(androidDeepLink);
+                  //alert(iosDeepLink);
+                  //console.log(androidDeepLink);
                 window.location.href = iosDeepLink;
             }
         }
