--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 window.location.href = androidDeepLink;
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 alert("ios");
-                alert(iosDeepLink);
+                //alert(iosDeepLink);
                 window.location.href = iosDeepLink;
             } else {
                 // Open the Amazon link in the browser for unsupported platforms
