--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                // var androidPackage = "in.amazon.mShop.android.shopping";
            // window.location.href = "market://details?id=" + androidPackage;
                 window.location.href = androidDeepLink;
-            } else if (/iPad|iPhone/.test(userAgent) && !window.MSStream) {
+            } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {
                 alert("ios");
                 //alert(iosDeepLink);
                 window.location.href = iosDeepLink;
