--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            //const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
              //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
             const iosDeepLink = `com.amazon.mobile.shopping.web://${amazonLink}`;
-
+            const defaultLink =  `https://www.${amazonLink}`;
              //const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mobile.shopping.web;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
 
             // Amazon deep link structure for Android
@@ -25,7 +25,7 @@
             } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {
                 window.location.href = iosDeepLink;
             } else {
-                window.location.href = amazonLink;
+                window.location.href = defaultLink;
             }
         }
 
