--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
             const userAgent = navigator.userAgent.toLowerCase() || navigator.vendor.toLowerCase();
             if (/android/i.test(userAgent)) {
                 window.location.href = iosDeepLink;
-            } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {               
-                try {
-             window.location.href = iosDeepLink;
-        } catch (error) {
+            } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {  
+                if (window.location.href = iosDeepLink) {
+                    // Successfully opened the Amazon app
+                    return;
+                }
+               // try {
+             window.location.href = defaultLink;
+       // } catch (error) {
             // Fallback to opening the Amazon link in the browser in case of an error
-            window.location.href = defaultLink;
-        }
+          //  window.location.href = defaultLink;
+        //}
             } else {
                 window.location.href = defaultLink;
             }
