--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     // Successfully opened the Amazon app
                     return;
                 }
+                alert("here");
                // try {
              window.location.href = defaultLink;
        // } catch (error) {
