--- a/index.html
+++ b/index.html
@@ -23,18 +23,13 @@
             if (/android/i.test(userAgent)) {
                 window.location.href = iosDeepLink;
             } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {  
-                if (window.location.href = iosDeepLink) {
-                    // Successfully opened the Amazon app
-                    alert("here1");
-                    return;
-                }
                 alert("here");
-               // try {
-             window.location.href = defaultLink;
-       // } catch (error) {
+                try {
+             window.location.href = iosDeepLink;
+           } catch (error) {
             // Fallback to opening the Amazon link in the browser in case of an error
-          //  window.location.href = defaultLink;
-        //}
+           window.location.href = defaultLink;
+        }
             } else {
                 window.location.href = defaultLink;
             }
