--- a/index.html
+++ b/index.html
@@ -23,15 +23,20 @@
             if (/android/i.test(userAgent)) {
                 window.location.href = iosDeepLink;
             } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {  
-
-                try {
-                                    alert("here1");
-             window.location.href = iosDeepLink;
-           } catch (error) {
-                                    alert("here2");
+                const img = new Image();
+                img.src = iosDeepLink;
+                img.onerror = function () {
+                    // Fallback to opening the Amazon link in the browser if the app is not installed
+                    window.location.href = defaultLink;
+                };
+                //try {
+          //  alert("here1");
+             //window.location.href = iosDeepLink;
+         //  } catch (error) {
+           // alert("here2");
             // Fallback to opening the Amazon link in the browser in case of an error
-           window.location.href = defaultLink;
-        }
+           //window.location.href = defaultLink;
+       // }
             } else {
                 window.location.href = defaultLink;
             }
