--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
            //window.location.href = defaultLink;
        // }
             } else {
+                alert(defaultLink);
                 window.location.href = defaultLink;
             }
         }
