--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        // }
             } else {
                 alert(defaultLink);
-                window.location.href = defaultLink;
+                window.location.href = amazonLink;
             }
         }
 
