--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            //window.location.href = defaultLink;
        // }
             } else {
-                alert(defaultLink);
+                alert(amazonLink);
                 window.location.href = amazonLink;
             }
         }
