--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            //const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
              //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
             const iosDeepLink = `com.amazon.mobile.shopping.web://${amazonLink}`;
-            const defaultLink =  `https://www.${amazonLink}`;
+            const defaultLink =  `${amazonLink}`;
              //const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mobile.shopping.web;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
 
             // Amazon deep link structure for Android
@@ -39,8 +39,8 @@
            //window.location.href = defaultLink;
        // }
             } else {
-                alert(amazonLink);
-                window.location.href = amazonLink;
+                alert(defaultLink);
+                window.location.href = defaultLink;
             }
         }
 
