--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        // }
             } else {
                 alert(shortLink);
-                window.location.href = defaultLink;
+                window.location.href = shortLink;
             }
         }
 
