--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function redirectToAmazon(amazonLink,shortLink) {
             const affiliateId = 'amanmahajan12-20';
-
+            //working url = https://www.amazon.com/dp/B07W624B8K?tag=amanmahajan12-20;
             // Amazon deep link structure for iOS
            //const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
              //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
