--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 };
             } else {
                 alert(shortLink);
-                window.location.href = test;
+                window.location.href = iosDeepLink;
             }
         }
 
