--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     window.location.href = defaultLink;
                 };
             } else {
-                alert(shortLink);
+                alert(iosDeepLink);
                 window.location.href = iosDeepLink;
             }
         }
