--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     window.location.href = defaultLink;
                 };
             } else {
-                alert(iosDeepLink);
-                window.location.href = iosDeepLink;
+                alert(defaultLink);
+                window.location.href = defaultLink;
             }
         }
 
