--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Redirect</title>
     <script>
-        function redirectToAmazon(amazonLink,shortLink) {
+        function redirectToAmazon(amazonLink) {
             const affiliateId = 'amanmahajan12-20';
             //working url = https://www.amazon.com/dp/B07W624B8K?tag=amanmahajan12-20;
-            // Amazon deep link structure for iOS
-           //const iosDeepLink = `amzn://apps/android?p=${affiliateId}&url=${encodeURIComponent(amazonLink)}`;
              //const iosDeepLink = `amzn://www.amazon.com/dp/{amazonLink}`;
             const iosDeepLink = `com.amazon.mobile.shopping.web://${amazonLink}`;
             const defaultLink =  `//${amazonLink}`;
@@ -22,16 +20,17 @@
 &linkId=2c689c70e06f86c5824586836c1f7dfb
 &language=en_US
 &ref_=as_li_ss_tl`;
-             //const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mobile.shopping.web;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
-
-            // Amazon deep link structure for Android
             
-            //const androidDeepLink = `intent://#Intent;scheme=http;package=com.amazon.mShop.android.shopping;S.browser_fallback_url=${encodeURIComponent(amazonLink)};end`;
-
             // Check if the device is iOS or Android and open the respective deep link
             const userAgent = navigator.userAgent.toLowerCase() || navigator.vendor.toLowerCase();
             if (/android/i.test(userAgent)) {
-                window.location.href = iosDeepLink;
+                const img = new Image();
+                img.src = iosDeepLink;
+                img.onerror = function () {
+                    alert(defaultLink);
+                    // Fallback to opening the Amazon link in the browser if the app is not installed
+                    window.location.href = defaultLink;
+                };
             } else if (/ipad|iphone/.test(userAgent) && !window.MSStream) {  
                 const img = new Image();
                 img.src = iosDeepLink;
@@ -49,9 +48,8 @@
         // Extract Amazon link from URL parameters and redirect
         const urlParams = new URLSearchParams(window.location.search);
         const amazonLink = urlParams.get('amazonLink');
-         const shortLink = urlParams.get('shortLink');
         if (amazonLink) {
-            redirectToAmazon(amazonLink,shortLink);
+            redirectToAmazon(amazonLink);
         }
     </script>
 </head>
