--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 const img = new Image();
                 img.src = iosDeepLink;
                 img.onerror = function () {
-                    alert(defaultLink);
+                   //alert(defaultLink);
                     // Fallback to opening the Amazon link in the browser if the app is not installed
                     window.location.href = defaultLink;
                 };
@@ -35,12 +35,12 @@
                 const img = new Image();
                 img.src = iosDeepLink;
                 img.onerror = function () {
-                    alert(defaultLink);
+                    //alert(defaultLink);
                     // Fallback to opening the Amazon link in the browser if the app is not installed
                     window.location.href = defaultLink;
                 };
             } else {
-                alert(defaultLink);
+                //alert(defaultLink);
                 window.location.href = defaultLink;
             }
         }
